# cpp_refactory

./: .gitignore  .npmignore  README.md  README_ZH-CN.md  index.ts  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: publish.yml
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  validate-sandbox.sh
lib/hooks/: env-inject.ts  session-lifecycle.ts  tool-guard.ts
lib/tools/: index.ts
lib/utils/: env-check.ts  paths.ts  state.ts
mcp/clang-ast-mcp/: pyproject.toml
mcp/clang-ast-mcp/src/clang_ast_mcp/: __init__.py  __main__.py  ast_engine.py  refactor_report.py  server.py
mcp/clang-ast-mcp/src/clang_ast_mcp/analyzers/: __init__.py  globals_finder.py  list_functions.py  macro_jungle.py  virtual_calls.py
mcp/clang-ast-mcp/tests/: conftest.py  stress_test.py  test_e2e_refactor.py  test_local.py  test_mcp_protocol.py
mcp/clang-ast-mcp/tests/fixtures/: compile_commands.json  complex.cpp  legacy_monster.cpp  sample.cpp
resources/configs/: clang-format.yaml  clang-tidy.yaml  clangd.yaml  editorconfig  gitattributes
resources/prompts/: change-risk.md  code-analysis.md  cpp-dev-constraints.md  project-recon.md  quality-gate.md  reconnaissance.md  refactor-review.md  risk-assessment.md  seam-discovery.md
resources/state-templates/: EXAMPLES.md  PARTITION_LEDGER.md  TOOL_GAPS.md  (+1 more)
scripts/: bootstrap-project.sh  characterize.sh  clang-ast-cache.sh  cpp-bigfile-map.sh  cpp-scan.sh  cpp-seam-finder.sh  fix-crlf.sh  install-tools.sh  ledger.sh  setup-gtest.sh  tool-gap-report.sh  verify-tools.sh
tests/: index.test.ts
(+12 files in other folders)
