[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clang-ast-mcp"
version = "0.1.0"
description = "MCP server providing precise C++ AST queries for legacy code refactoring"
requires-python = ">=3.10"
authors = [{ name = "cpp_refactory" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "libclang>=18.1.1",
]

[project.scripts]
clang-ast-mcp = "clang_ast_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clang_ast_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
